src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>QVM Support Process</fullName>
        <description>QVM Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Traders Support Process</fullName>
        <description>Traders Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Business_Class__c</fullName>
        <formula>TEXT(Account_Business__r.Class__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Business Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Business_Start_Date__c</fullName>
        <formula>TEXT(Account_Business__r.Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Business Start Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Business__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Business</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BreachDateAndTime__c</fullName>
        <description>Date and time of the breach.</description>
        <label>Breach Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ClauseBreached__c</fullName>
        <description>Code of the breached clause.</description>
        <label>Clause Breached</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location of breach</description>
        <label>Breach Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offense_Rule_Picklist__c</fullName>
        <label>Offense Rule</label>
        <picklist>
            <controllingField>Offense__c</controllingField>
            <picklistValues>
                <fullName>Directions: PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directions: SL1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directions: SL2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Displays and Stalls: PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forklift: Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forklift: Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forklift: Safety Vest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forklift: Spotter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forklifts - Footway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forklifts: Footway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forklifts: Passenger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Rules Regulations: Rules for conduct PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permitted Activities PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permitted Activities: SL1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permitted Activities: SL2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set Up &amp; Pack Down: PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set Up &amp; Pack Down: SL1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set Up &amp; Pack Down: SL2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stall Boundaries: PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stall Boundaries: SL1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stall Boundaries: SL2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage Boxes: PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage Boxes: SL1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage Boxes: SL2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicles - Moving: PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicles - Moving: SL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicles - Parking: PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicles - Parking: SL1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicles - Parking: SL2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remedy: Immediate</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offense__c</fullName>
        <globalPicklist>Offense</globalPicklist>
        <label>Offense</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remedy_Rule__c</fullName>
        <description>Remedy rule text</description>
        <label>Remedy Rule</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remedy__c</fullName>
        <label>Remedy</label>
        <picklist>
            <picklistValues>
                <fullName>Remedy: Immediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remedy: One week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remedy: Two weeks</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rule_Description__c</fullName>
        <label>Rule Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>infringements - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>infringements - Spread</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spread</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. 7 Days after due date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. 14 Days after due date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. 30 Days after due date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Meeting Outcome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Non Agreement / Absence (Letter of Default)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. 45 Days after due date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Collection agency appointed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Letter of Default advising of cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. &gt;60 Days/Cancel  Lease/ Legal Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-op Marketing Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trader Hub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permitted Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH&amp;S and Forklift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stall Boundaries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Rules &amp; Regulations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Litter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set-Up &amp; Pack-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disputes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>Customer_Services_Department_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Customer Services Department</label>
        <queue>Customer_Services_Department</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Events_Department_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Events Department Queue</label>
        <queue>Events_Department_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Facilities_Department_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Facilities Department Queue</label>
        <queue>Facilities_Department_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_Department_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance Department Queue</label>
        <queue>Finance_Department_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Marketing_Department_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Marketing Department Queue</label>
        <queue>Marketing_Department_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Operations_Department_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Operations Department Queue</label>
        <queue>Operations_Department_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Property_Department_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Property Department Queue</label>
        <queue>Property_Department_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Notice_of_Breach</fullName>
        <active>true</active>
        <businessProcess>QVM Support Process</businessProcess>
        <description>Notice of assessment for trader infringements</description>
        <label>Notice of Breach</label>
    </recordTypes>
    <recordTypes>
        <fullName>QVM_Record_Type</fullName>
        <active>true</active>
        <businessProcess>QVM Support Process</businessProcess>
        <label>QVM Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trader_Record_Type</fullName>
        <active>true</active>
        <businessProcess>Traders Support Process</businessProcess>
        <label>Trader Case</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>case_type_required</fullName>
        <active>true</active>
        <description>A case type is required for routing purposes</description>
        <errorConditionFormula>AND(ISBLANK(TEXT(Type)), RecordType.DeveloperName &lt;&gt; &quot;Notice_of_Breach&quot;)</errorConditionFormula>
        <errorDisplayField>Type</errorDisplayField>
        <errorMessage>A case type must be selected</errorMessage>
    </validationRules>
</CustomObject>